# jacquard

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  book.toml  clippy.toml  flake.nix  justfile  rustfmt.toml
crates/adapter/: Cargo.toml
crates/adapter/src/: claims.rs  decay_window.rs  dispatch.rs  endpoint.rs  lib.rs  mailbox.rs  ogm_receive_window.rs  peers.rs  topology.rs
crates/babel/: Cargo.toml
crates/babel/src/: gossip.rs  lib.rs  planner.rs  planner_model.rs  private_state.rs  public_state.rs  runtime.rs  scoring.rs  simulator.rs  validation.rs
crates/babel/tests/: router_integration.rs
crates/batman/: Cargo.toml
crates/batman-bellman/: Cargo.toml
crates/batman-bellman/src/: gossip.rs  lib.rs  planner.rs  planner_model.rs  private_state.rs  public_state.rs  runtime.rs  scoring.rs  simulator.rs  validation.rs
crates/batman-bellman/tests/: router_integration.rs
crates/batman/src/: gossip.rs  lib.rs  planner.rs  private_state.rs  public_state.rs  runtime.rs  scoring.rs
crates/batman/tests/: router_integration.rs
crates/cast-profile/: Cargo.toml
crates/cast-profile/src/: bounds.rs  broadcast.rs  common.rs  lib.rs  multicast.rs  unicast.rs
crates/cast-profile/tests/: broadcast.rs  multicast.rs  surface.rs  unicast.rs
crates/cast-support/: Cargo.toml
crates/cast-support/src/: broadcast.rs  common.rs  delivery.rs  lib.rs  multicast.rs  unicast.rs
crates/cast-support/tests/: broadcast.rs  delivery.rs  multicast.rs  surface.rs  unicast.rs
crates/core/: Cargo.toml
crates/core/src/: admission.rs  audit.rs  authoring.rs  capabilities.rs  connectivity.rs  constants.rs  content.rs  errors.rs  estimation.rs  identity.rs  intrinsics.rs  lib.rs  observations.rs  policy.rs  qualifiers.rs  runtime.rs  tests.rs  time.rs  topology.rs
crates/core/tests/: integration.rs  regression.rs
crates/field/: Cargo.toml
crates/field-client/: Cargo.toml
crates/field-client/src/: client.rs  lib.rs  topology.rs
crates/field-client/tests/: e2e_field_client.rs
crates/field/src/: attractor.rs  choreography.rs  control.rs  engine.rs  lib.rs  observer.rs  operational.rs  planner.rs  planner_model.rs  policy.rs  recovery.rs  research.rs  route.rs  runtime.rs  simulator.rs  state.rs  summary.rs  validation.rs
crates/field/tests/: contracts.rs  docs.rs  replay_export.rs  research_path.rs  search.rs
crates/host-support/: Cargo.toml
crates/host-support/src/: claims.rs  decay_window.rs  dispatch.rs  endpoint.rs  lib.rs  mailbox.rs  ogm_receive_window.rs  peers.rs  topology.rs
crates/macros/: Cargo.toml
crates/macros/src/: effect_handler_macro.rs  effect_trait_macro.rs  id_type_macro.rs  lib.rs  must_use_handle_macro.rs  public_model_macro.rs  purity_macro.rs  support.rs
crates/macros/tests/: integration.rs  regression.rs
crates/mem-link-profile/: Cargo.toml
crates/mem-link-profile/src/: authoring.rs  cast.rs  defaults.rs  effect.rs  effects.rs  endpoint.rs  frame_carrier.rs  lib.rs  link_state.rs  network.rs  protocol.rs  retention.rs  state.rs  transport.rs
crates/mem-link-profile/tests/: transport.rs
crates/mem-node-profile/: Cargo.toml
crates/mem-node-profile/src/: authoring.rs  defaults.rs  endpoint.rs  lib.rs  profile.rs  service.rs  services.rs  state.rs
crates/mem-node-profile/tests/: profile.rs
crates/mercator/: Cargo.toml
crates/mercator/src/: corridor.rs  corridor_token.rs  custody.rs  evidence.rs  lib.rs  planner.rs  public_state.rs  runtime.rs
crates/mercator/tests/: broadcast_cast.rs  corridor.rs  custody.rs  evidence.rs  fairness.rs  repair.rs  trait_surface.rs  unicast_cast.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: committee.rs  contracts.rs  engine.rs  lib.rs  topology.rs
crates/mesh/tests/: admission.rs  capabilities.rs  checkpoint.rs  choreography_runtime.rs  commitments.rs  committee.rs  contracts.rs  determinism.rs  engine_tick.rs  integration.rs  lease.rs  lifecycle.rs  maintenance.rs  materialization.rs  topology.rs  transport_boundary.rs
crates/mock-client/: Cargo.toml
crates/mock-client/src/: fixtures.rs  lib.rs  mesh.rs
crates/mock-client/tests/: multi_device_mesh.rs
crates/mock-device/: Cargo.toml
crates/mock-device/src/: lib.rs  mesh.rs
crates/mock-device/tests/: multi_device_mesh.rs
crates/mock-transport/: Cargo.toml
crates/mock-transport/src/: lib.rs
crates/olsrv2/: Cargo.toml
crates/olsrv2/src/: gossip.rs  lib.rs  mpr.rs  planner.rs  planner_model.rs  private_state.rs  public_state.rs  runtime.rs  simulator.rs  spf.rs  validation.rs
crates/olsrv2/tests/: router_integration.rs
crates/pathway/: Cargo.toml
crates/pathway/src/: contracts.rs  lib.rs  planner_model.rs  simulator.rs  topology.rs  validation.rs
crates/pathway/tests/: admission.rs  capabilities.rs  checkpoint.rs  choreography_runtime.rs  commitments.rs  committee.rs  contracts.rs  determinism.rs  engine_tick.rs  lease.rs  lifecycle.rs  maintenance.rs  materialization.rs  router_integration.rs  search.rs  topology.rs  transport_boundary.rs
crates/reference-client/: Cargo.toml
crates/reference-client/src/: bridge.rs  clients.rs  defaults.rs  fixtures.rs  lib.rs  mesh.rs  router_integration.rs  topology.rs
crates/reference-client/tests/: cast_profile.rs  cast_support.rs  client_builder.rs  e2e_batman_pathway_handoff.rs  e2e_multi_layer_routing.rs  e2e_olsrv2_pathway_handoff.rs  e2e_olsrv2_shared_network.rs  e2e_pathway_shared_network.rs  multi_device_mesh.rs  wasm_smoke.rs
crates/router/: Cargo.toml
crates/router/src/: delivery.rs  lib.rs  mesh_router.rs  middleware.rs  runtime.rs  single_engine.rs
crates/router/tests/: mesh_router.rs  router_activation.rs  router_delivery_admission.rs  router_extension_hosting.rs  router_fail_closed.rs  router_field_hosting.rs  router_middleware.rs  router_proactive.rs  router_registry.rs  router_round.rs
crates/scatter/: Cargo.toml
crates/simulator/: ARCHITECTURE.md  Cargo.toml
crates/testkit/: Cargo.toml
crates/traits/: Cargo.toml
crates/xtask/: Cargo.toml
lints/model_policy/: Cargo.toml  README.md
lints/trait_must_use/: Cargo.toml  README.md
(+733 files in other folders)
