[workspace]
resolver = "2"
members = [
  "policy/xtask",
  "crates/adapter",
  "crates/batman",
  "crates/core",
  "crates/field",
  "crates/field-client",
  "crates/macros",
  "crates/mem-link-profile",
  "crates/mem-node-profile",
  "crates/pathway",
  "crates/reference-client",
  "crates/router",
  "crates/simulator",
  "crates/traits",
]

[workspace.package]
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Sam Hart"]

[workspace.lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
as_conversions = "warn"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
dbg_macro = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"
float_arithmetic = "deny"
needless_pass_by_value = "warn"
todo = "deny"
unimplemented = "deny"
wildcard_imports = "warn"

[workspace.dependencies]
# choreography/runtime
telltale = "12.0.0"
telltale-search = "12.0.0"
telltale-types = "12.0.0"
telltale-macros = "12.0.0"
telltale-runtime = "12.0.0"
telltale-simulator = "12.0.0"

# async
futures     = "0.3"
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"

# serialization
serde      = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = "1"
bincode    = "1"

# error handling
thiserror = "1"
anyhow    = "1"

# tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# utilities
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
cfg-if = "1"
wasm-bindgen-test = "0.3"

# toolkit
rust-toolkit-effects = { git = "https://github.com/hxrts/toolkit.git", rev = "49e86a7425d0f790073cd7be8eb94ca60dcba893" }
rust-toolkit-trait-contracts = { git = "https://github.com/hxrts/toolkit.git", rev = "49e86a7425d0f790073cd7be8eb94ca60dcba893" }
