[package]
name = "jacquard-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reusable adapter-support primitives for Jacquard transport/profile implementers"

[lints]
workspace = true

[dependencies]
jacquard-core = { path = "../core", version = "0.1.0" }
jacquard-macros = { path = "../macros", version = "0.1.0" }
serde = { workspace = true }
