[package]
name = "jacquard-babel"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
bincode = { version = "1", default-features = false }
jacquard-core = { path = "../core" }
jacquard-traits = { path = "../traits" }
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
jacquard-adapter = { path = "../adapter" }
jacquard-mem-link-profile = { path = "../mem-link-profile" }
jacquard-mem-node-profile = { path = "../mem-node-profile" }
jacquard-router = { path = "../router" }
