[package]
name = "jacquard-batman"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Proactive BATMAN-style next-hop routing engine for Jacquard"

[lints]
workspace = true

[dependencies]
jacquard-core = { path = "../core", version = "0.3.0" }
jacquard-traits = { path = "../traits", version = "0.3.0" }

[dev-dependencies]
jacquard-adapter = { path = "../adapter" }
jacquard-mem-link-profile = { path = "../mem-link-profile" }
jacquard-mem-node-profile = { path = "../mem-node-profile" }
jacquard-router = { path = "../router" }
