[package]
name = "jacquard-cast-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Deterministic cast support helpers for Jacquard transport profiles"

[lints]
workspace = true

[dependencies]
jacquard-core = { path = "../core", version = "0.7.1" }
serde = { workspace = true, default-features = false }
