[package]
name = "jacquard-cast-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Deterministic cast support helpers for Jacquard transport profiles"

[lints]
workspace = true

[features]
default = ["std"]
std = ["jacquard-core/std", "serde/std"]

[dependencies]
jacquard-core = { path = "../core", version = "0.9.0", default-features = false }
serde = { workspace = true, default-features = false }
