[package]
name = "jacquard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared identifiers, types, and constants for Jacquard routing"

[lints]
workspace = true

[dependencies]
jacquard-macros = { path = "../macros", version = "0.3.1" }
serde      = { workspace = true, default-features = false }
thiserror  = { workspace = true }

[dev-dependencies]
jacquard-traits = { path = "../traits" }
serde_json = { workspace = true }
