[package]
name = "jacquard-field-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Standalone field-engine client harness for Jacquard"

[lints]
workspace = true

[dependencies]
jacquard-adapter = { path = "../adapter", version = "0.2.0" }
jacquard-core = { path = "../core", version = "0.2.0" }
jacquard-field = { path = "../field", version = "0.2.0" }
jacquard-mem-link-profile = { path = "../mem-link-profile", version = "0.2.0" }
jacquard-mem-node-profile = { path = "../mem-node-profile", version = "0.2.0" }
jacquard-traits = { path = "../traits", version = "0.2.0" }
