[package]
name = "jacquard-field"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Field-style corridor-envelope routing engine for Jacquard"

[lints]
workspace = true

[features]
default = []
simulator-support = []

[dependencies]
jacquard-core = { path = "../core", version = "0.5.0" }
jacquard-traits = { path = "../traits", version = "0.5.0" }
cfg-if = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
bincode = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
telltale-search = { workspace = true, features = ["multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
telltale-search = { workspace = true }

[dev-dependencies]
jacquard-adapter = { path = "../adapter" }
jacquard-mem-link-profile = { path = "../mem-link-profile" }
jacquard-mem-node-profile = { path = "../mem-node-profile" }
