[package]
name = "jacquard-host-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Reusable host-support primitives for Jacquard transport/profile implementers"

[lints]
workspace = true

[dependencies]
jacquard-core = { path = "../core", version = "0.6.0" }
jacquard-macros = { path = "../macros", version = "0.6.0" }
cfg-if = { workspace = true }
serde = { workspace = true, default-features = false }
