[package]
name = "jacquard-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Procedural macros for Jacquard effect and handler boundaries"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
rust-toolkit-trait-contracts = { git = "https://github.com/hxrts/toolkit.git", rev = "1fc34613cbc55b0a8ce0421c6fb439931972ff30" }

[dev-dependencies]
serde = { workspace = true, default-features = false }
trybuild = "1"
