[package]
name = "jacquard-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Procedural macros for Jacquard effect and handler boundaries"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
rust-toolkit-trait-contracts = { workspace = true }

[dev-dependencies]
serde = { workspace = true, default-features = false }
trybuild = "1"
