[package]
name = "jacquard-mem-link-profile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "In-memory link profile and carrier implementations for Jacquard tests"

[lints]
workspace = true

[dependencies]
jacquard-adapter = { path = "../adapter" }
jacquard-core = { path = "../core" }
jacquard-traits = { path = "../traits" }
serde = { workspace = true }

[dev-dependencies]
