[package]
name = "jacquard-mem-link-profile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "In-memory link profile and carrier implementations for Jacquard tests"

[lints]
workspace = true

[dependencies]
jacquard-adapter = { path = "../adapter", version = "0.2.0" }
jacquard-core = { path = "../core", version = "0.2.0" }
jacquard-traits = { path = "../traits", version = "0.2.0" }
serde = { workspace = true }

[dev-dependencies]
