[package]
name = "jacquard-mem-link-profile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "In-memory link profile and carrier implementations for Jacquard tests"

[lints]
workspace = true

[dependencies]
jacquard-cast-support = { path = "../cast-support", version = "0.8.0" }
jacquard-host-support = { path = "../host-support", version = "0.8.0" }
jacquard-core = { path = "../core", version = "0.8.0" }
jacquard-traits = { path = "../traits", version = "0.8.0" }
serde = { workspace = true, default-features = false }

[dev-dependencies]
