[package]
name = "jacquard-mem-node-profile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "In-memory node profile and node state builders for Jacquard tests"

[lints]
workspace = true

[dependencies]
jacquard-adapter = { path = "../adapter", version = "0.2.0" }
jacquard-core = { path = "../core", version = "0.2.0" }
serde = { workspace = true }
serde_json = { workspace = true }
