[package]
name = "jacquard-mem-node-profile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "In-memory node profile and node state builders for Jacquard tests"

[lints]
workspace = true

[dependencies]
jacquard-adapter = { path = "../adapter", version = "0.4.0" }
jacquard-core = { path = "../core", version = "0.4.0" }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
