[package]
name = "jacquard-mem-node-profile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "In-memory node profile and node state builders for Jacquard tests"

[lints]
workspace = true

[dependencies]
jacquard-host-support = { path = "../host-support", version = "0.7.1" }
jacquard-core = { path = "../core", version = "0.7.1" }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
