[package]
name = "jacquard-mercator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Deterministic hybrid corridor routing engine skeleton for Jacquard"

[lints]
workspace = true

[features]
default = ["std"]
std = ["jacquard-core/std", "jacquard-traits/std", "serde/std"]

[dependencies]
jacquard-core = { path = "../core", version = "0.9.0", default-features = false }
jacquard-traits = { path = "../traits", version = "0.9.0", default-features = false }
serde = { workspace = true, default-features = false }

[dev-dependencies]
jacquard-cast-support = { path = "../cast-support", version = "0.9.0" }
jacquard-host-support = { path = "../host-support" }
jacquard-mem-link-profile = { path = "../mem-link-profile" }
jacquard-mem-node-profile = { path = "../mem-node-profile" }
