[package]
name = "jacquard-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "First-party deterministic mesh routing engine for Jacquard"

[lints]
workspace = true

[dependencies]
jacquard-core = { path = "../core" }
jacquard-traits = { path = "../traits" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
