[package]
name = "jacquard-mock-device"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Mock device-side Jacquard integration harness"

[lints]
workspace = true

[dependencies]
jacquard-core = { path = "../core" }
jacquard-mesh = { path = "../mesh" }
jacquard-mock-transport = { path = "../mock-transport" }
jacquard-router = { path = "../router" }
jacquard-traits = { path = "../traits" }

[dev-dependencies]
