[package]
name = "jacquard-pathway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "First-party deterministic pathway routing engine for Jacquard"

[lints]
workspace = true

[dependencies]
jacquard-core = { path = "../core", version = "0.3.1" }
jacquard-traits = { path = "../traits", version = "0.3.1" }
cfg-if = { workspace = true }
telltale = { workspace = true }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true }
bincode = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
telltale-search = { workspace = true, features = ["multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
telltale-search = { workspace = true }

[dev-dependencies]
jacquard-mem-link-profile = { path = "../mem-link-profile" }
