[package]
name = "jacquard-reference-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Reference in-memory Jacquard client composition"

[lints]
workspace = true

[dependencies]
jacquard-host-support = { path = "../host-support", version = "0.7.1" }
jacquard-babel = { path = "../babel", version = "0.7.1" }
jacquard-batman-bellman = { path = "../batman-bellman", version = "0.7.1" }
jacquard-batman-classic = { path = "../batman-classic", version = "0.7.1" }
jacquard-core = { path = "../core", version = "0.7.1" }
jacquard-field = { path = "../field", version = "0.7.1" }
jacquard-mem-link-profile = { path = "../mem-link-profile", version = "0.7.1" }
jacquard-mem-node-profile = { path = "../mem-node-profile", version = "0.7.1" }
jacquard-mercator = { path = "../mercator", version = "0.7.1" }
jacquard-olsrv2 = { path = "../olsrv2", version = "0.7.1" }
jacquard-pathway = { path = "../pathway", version = "0.7.1" }
jacquard-router = { path = "../router", version = "0.7.1" }
jacquard-scatter = { path = "../scatter", version = "0.7.1" }
jacquard-traits = { path = "../traits", version = "0.7.1" }
thiserror = { workspace = true }

[dev-dependencies]
jacquard-cast-support = { path = "../cast-support", version = "0.7.1" }
jacquard-testkit = { path = "../testkit", features = ["reference-client-e2e", "topology-full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
