[package]
name = "jacquard-router"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Canonical router middleware for Jacquard"

[lints]
workspace = true

[dependencies]
bincode = { workspace = true }
jacquard-core = { path = "../core", version = "0.3.0" }
jacquard-traits = { path = "../traits", version = "0.3.0" }
serde = { workspace = true }

[dev-dependencies]
jacquard-batman = { path = "../batman" }
jacquard-field = { path = "../field" }
jacquard-pathway = { path = "../pathway" }
jacquard-mem-link-profile = { path = "../mem-link-profile" }
jacquard-reference-client = { path = "../reference-client" }
