[package]
name = "jacquard-router"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Canonical router middleware for Jacquard"

[lints]
workspace = true

[dependencies]
bincode = { workspace = true }
jacquard-core = { path = "../core", version = "0.6.0" }
jacquard-traits = { path = "../traits", version = "0.6.0" }
serde = { workspace = true, default-features = false }

[dev-dependencies]
jacquard-batman-bellman = { path = "../batman-bellman" }
jacquard-field = { path = "../field" }
jacquard-pathway = { path = "../pathway" }
jacquard-mem-link-profile = { path = "../mem-link-profile" }
jacquard-testkit = { path = "../testkit", features = ["topology-full"] }
