[package]
name = "jacquard-router"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Canonical router middleware for Jacquard"

[lints]
workspace = true

[features]
default = ["std"]
std = ["jacquard-core/std", "jacquard-traits/std", "serde/std"]

[dependencies]
jacquard-core = { path = "../core", version = "0.8.0", default-features = false }
jacquard-traits = { path = "../traits", version = "0.8.0", default-features = false }
postcard = { workspace = true }
serde = { workspace = true, default-features = false }

[dev-dependencies]
jacquard-batman-bellman = { path = "../batman-bellman" }
jacquard-pathway = { path = "../pathway" }
jacquard-mem-link-profile = { path = "../mem-link-profile" }
jacquard-testkit = { path = "../testkit", features = ["topology-full"] }
