[package]
name = "jacquard-scatter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Deterministic bounded deferred-delivery routing engine for Jacquard"

[lints]
workspace = true

[dependencies]
bincode = { workspace = true }
jacquard-core = { path = "../core", version = "0.6.0" }
jacquard-traits = { path = "../traits", version = "0.6.0" }
serde = { workspace = true, default-features = false }

[dev-dependencies]
jacquard-host-support = { path = "../host-support" }
jacquard-mem-link-profile = { path = "../mem-link-profile" }
jacquard-mem-node-profile = { path = "../mem-node-profile" }
jacquard-router = { path = "../router" }
