[package]
name = "jacquard-simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Scenario and replay harness for deterministic Jacquard routing analysis"

[dependencies]
jacquard-adapter = { version = "0.6.0", path = "../adapter" }
jacquard-babel = { version = "0.6.0", path = "../babel" }
jacquard-batman-bellman = { version = "0.6.0", path = "../batman-bellman" }
jacquard-batman-classic = { version = "0.6.0", path = "../batman-classic" }
jacquard-core = { version = "0.6.0", path = "../core" }
jacquard-field = { version = "0.6.0", path = "../field" }
jacquard-mem-link-profile = { version = "0.6.0", path = "../mem-link-profile" }
jacquard-mem-node-profile = { version = "0.6.0", path = "../mem-node-profile" }
jacquard-olsrv2 = { version = "0.6.0", path = "../olsrv2" }
jacquard-pathway = { version = "0.6.0", path = "../pathway" }
jacquard-reference-client = { version = "0.6.0", path = "../reference-client" }
jacquard-router = { version = "0.6.0", path = "../router" }
jacquard-scatter = { version = "0.6.0", path = "../scatter" }
jacquard-traits = { version = "0.6.0", path = "../traits" }

serde = { workspace = true, default-features = false }
serde_json.workspace = true
rayon.workspace = true
telltale-simulator.workspace = true
thiserror.workspace = true

[lints]
workspace = true
