[package]
name = "jacquard-simulator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Scenario and replay harness for deterministic Jacquard routing analysis"

[dependencies]
jacquard-host-support = { version = "0.7.1", path = "../host-support" }
jacquard-babel = { version = "0.7.1", path = "../babel" }
jacquard-batman-bellman = { version = "0.7.1", path = "../batman-bellman" }
jacquard-batman-classic = { version = "0.7.1", path = "../batman-classic" }
jacquard-cast-support = { version = "0.7.1", path = "../cast-support" }
jacquard-core = { version = "0.7.1", path = "../core" }
jacquard-field = { version = "0.7.1", path = "../field" }
jacquard-mem-link-profile = { version = "0.7.1", path = "../mem-link-profile" }
jacquard-mem-node-profile = { version = "0.7.1", path = "../mem-node-profile" }
jacquard-mercator = { version = "0.7.1", path = "../mercator" }
jacquard-olsrv2 = { version = "0.7.1", path = "../olsrv2" }
jacquard-pathway = { version = "0.7.1", path = "../pathway" }
jacquard-reference-client = { version = "0.7.1", path = "../reference-client" }
jacquard-router = { version = "0.7.1", path = "../router" }
jacquard-scatter = { version = "0.7.1", path = "../scatter" }
jacquard-traits = { version = "0.7.1", path = "../traits" }

serde = { workspace = true, default-features = false }
serde_json.workspace = true
rayon.workspace = true
telltale-simulator.workspace = true
thiserror.workspace = true

[lints]
workspace = true
